[project]
name = "rating-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain[anthropic,openai]>=0.3.22",
    "langchain-google-genai>=2.1.2",
    "langgraph>=0.3.23",
    "langgraph-reflection>=0.0.1",
    "python-dotenv>=1.1.0",
    "tenacity>=9.1.2",
    "langchain-community>=0.3.20",
    "requests>=2.32.3",
    "beautifulsoup4>=4.13.3",
    "rich>=14.0.0",
    "markdown>=3.7",
    "faiss-cpu>=1.10.0",
    "google-genai>=1.9.0",
    "mistralai>=1.6.0",
    "numpy>=2.2.4",
    "openai>=1.70.0",
    "pandas>=2.2.3",
    "psutil>=7.0.0",
    "pypdf2>=3.0.1",
    "tiktoken>=0.9.0",
    "weasyprint>=65.0",
]
